[project]
name = "imind-agent-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "songli", email = "18601038090@163.com" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.7", "pydantic-settings>=2.9.1"]

[project.scripts]
imind-agent = "imind_agent:main"

[build-system]
requires = ["uv_build>=0.7.13,<0.8"]
build-backend = "uv_build"
