[project]
name = "imind-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "songli", email = "18601038090@163.com" }]
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langmem>=0.0.27",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "transformers>=4.52.4",
]

[project.scripts]
imind-agent = "imind_agent:main"

[build-system]
requires = ["uv_build>=0.7.13,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "imind_ai"
module-root = ""
